--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="full-page-loader-root"></div>
     <div id="loader-root"></div>
   </body>
 </html>
