--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Fitelity</title>
+    <title>Keep It Fit</title>
   </head>
   <body>
     <div id="root"></div>
