changed name to healfit

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Keep It Fit</title>
+    <title>Healfit</title>
   </head>
 
   <body>
