--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="language" content="en" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -9,13 +10,31 @@
       href="./assets/images/favicon.ico"
       type="image/x-icon"
     />
-    <link rel="icon" href="./assets/images/favicon.ico" type="image/x-icon" />
+    <!--
+      <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
+    -->
+    <!--
+      <link rel="icon" type="image/png" href="/images/icons/icon-32.png" />
+        <link rel="icon" type="image/png" href="/images/icons/favicon.png">
+        <link rel="apple-touch-icon" href="/images/icons/apple-touch-icon.png" />
+        <link rel="apple-touch-icon" href="/images/icons/apple-touch-icon-precomposed.png" />
+        <link rel="apple-touch-icon" sizes="57x57" href="/images/icons/apple-touch-icon-57x57.png" />
+        <link rel="apple-touch-icon" sizes="72x72" href="/images/icons/apple-touch-icon-72x72.png" />
+        <link rel="apple-touch-icon" sizes="76x76" href="/images/icons/apple-touch-icon-76x76.png" />
+        <link rel="apple-touch-icon" sizes="76x76" href="/images/icons/apple-touch-icon-76x76-precomposed.png" />
+        <link rel="apple-touch-icon" sizes="114x114" href="/images/icons/apple-touch-icon-114x114.png" />
+        <link rel="apple-touch-icon" sizes="120x120" href="/images/icons/apple-touch-icon-120x120.png" />
+        <link rel="apple-touch-icon" sizes="144x144" href="/images/icons/apple-touch-icon-144x144.png" />
+        <link rel="apple-touch-icon" sizes="152x152" href="/images/icons/apple-touch-icon-152x152.png" />
+        <link rel="apple-touch-icon" sizes="152x152" href="/images/icons/apple-touch-icon-152x152-precomposed.png" />
+        <link rel="apple-touch-icon" sizes="180x180" href="/images/icons/apple-touch-icon-180x180.png" />
+    -->
     <title>Healfit</title>
   </head>
 
   <body>
     <div id="root"></div>
     <div id="full-page-loader-root"></div>
-    <div id="loader-root"></div>
+    <div id="cookie-popup-root"></div>
   </body>
 </html>
