--- a/src/index.html
+++ b/src/index.html
@@ -36,5 +36,6 @@
     <div id="root"></div>
     <div id="full-page-loader-root"></div>
     <div id="cookie-popup-root"></div>
+    <div id="toast-root"></div>
   </body>
 </html>
