--- a/src/index.html
+++ b/src/index.html
@@ -37,5 +37,9 @@
     <div id="full-page-loader-root"></div>
     <div id="cookie-popup-root"></div>
     <div id="toast-root"></div>
+    <script
+      src="//widget.cloudinary.com/global/all.js"
+      type="text/javascript"
+    ></script>
   </body>
 </html>
