--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
+      async=""
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900"
+      rel="stylesheet"
+    />
+    <link
       rel="shortcut icon"
       href="/assets/images/favicon.ico"
       type="image/x-icon"
