--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,10 @@
       rel="stylesheet"
     />
     <link
+      href="https://fonts.googleapis.com/css?family=PT+Serif"
+      rel="stylesheet"
+    />
+    <link
       rel="shortcut icon"
       href="/assets/images/favicon.ico"
       type="image/x-icon"
