--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,7 @@
   <div id="full-page-loader-root"></div>
   <div id="cookie-popup-root"></div>
   <div id="toast-root"></div>
+  <noscript>Your browser does not support JavaScript!</noscript>
   <script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
 </body>
 
