--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,11 @@
       content="healfit helps you plan and keep track of what you eat"
     />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale = 1.0, maximum-scale=1.0"
+    />
+
     <!--
       <link
         async=""
